syntax = "proto3";

package fluence.network.proto;

message Header {
    Node from = 1;
    bytes to = 2;
    int64 timestamp = 3;
    bool promote = 4;
}

message Node {
    bytes id = 1;
    bytes ip = 2;
    int32 port = 3;
}

message NodesResponse {
    repeated Node nodes = 1;
}

message PingRequest {
    Header header = 1;
}

message LookupRequest{
    Header header = 1;

    bytes key = 2;
    int32 numberOfNodes = 3;
}

service Kademlia {
    rpc ping(PingRequest) returns (Node);
    rpc lookup(LookupRequest) returns (NodesResponse);
    rpc lookupIterative(LookupRequest) returns (NodesResponse);
}